fix: Smaller paragraph spacing; add paragraph spacing for blockquotes

--- a/themes/cactus/source/css/_partial/article.styl
+++ b/themes/cactus/source/css/_partial/article.styl
@@ -56,15 +56,15 @@ article
         height: 100%
 
     blockquote
-      margin: 1rem 10px
-      padding: .5em 10px
+      margin: 0.75rem 10px
       background: inherit
       color: $color-quote
       quotes: "\201C" "\201D" "\2018" "\2019"
-      font-weight: bold
+      font-style: italic
+      // font-weight: bold
 
-      p
-        margin: 0
+      // p
+      //   margin: 0
 
       &:before
         margin-right: .25em
