--- a/themes/cactus/source/css/style.styl
+++ b/themes/cactus/source/css/style.styl
@@ -44,6 +44,8 @@ body
 
   p
     hyphens(auto)
+    margin-block-start: 0em
+    margin-block-end: 0.75em
 
   code
     hyphens(manual)
